update: added Pokerbaazi

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist -b gh-pages"
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
@@ -15,6 +16,7 @@
     "@react-three/fiber": "^8.15.14",
     "@types/three": "^0.160.0",
     "framer-motion": "^10.18.0",
+    "gh-pages": "^6.3.0",
     "maath": "^0.10.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
